--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     Discover eyewear brands!
   </h1>
 
+
+
+<footer>
+  This AI project was coded by <a href="https://www.beedieoneyewear.com/" target="_blank" rel="noopener noreferrer">Ebiye Beedie</a> and is hosted on <a href="https://github.com/missbeedie" target="_blank" rel="noopener noreferrer">Github</a> and <a href="https://eyewearbrandgenerator.netlify.app/" target="_blank" rel="noopener noreferrer">Netlify</a> 
+</footer>
+
   <script src="src/index.js"></script>
 </body>
 </html>
