--- a/index.html
+++ b/index.html
@@ -4,14 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/style.css">
+  <slink rel="stylesheet" href="src/style.css">
   <title>Eyewear Brand Generator</title>
 </head>
 <body>
+  <div class="container">
   <h1>
     Discover eyewear brands!
   </h1>
 
+  <main>
+    <form action="">
+      <input type="text" placeholder="Enter your preferred eyewear style">
+      <select name="" id="">Select your budget
+        <option value=""></option>
+        <option value="">up to £100</option>
+        <option value="">£100-£199</option>
+        <option value="">£200-£299</option>
+        <option value="">£300+</option>
+
+      </select>
+      <input type="submit">
+    </form>
+      
+  </main>
+
+  <div class="eyewear-brand">
+
+  </div>
 
 
 <footer>
@@ -19,5 +39,6 @@
 </footer>
 
   <script src="src/index.js"></script>
+  </div>
 </body>
 </html>
