added basic formhandling and typewriter plug in

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/style.css">
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <title>Eyewear Brand Generator</title>
 </head>
 <body>
@@ -13,8 +14,9 @@
     Discover eyewear brands!
   </h1>
 
+
   <main>
-    <form action="">
+    <form id="eyewear-generator-form" action="">
       <input type="text" class="input-text" placeholder="Enter your preferred eyewear style">
       <select name="" id="">
         <option value="" disabled="true">Budget</option>
@@ -30,13 +32,13 @@
       
   </main>
 
-  <div class="eyewear-brand">
+  <div class="eyewear-brand" id="eyewear-brand">
     Here are your results:
   </div>
 
 
 <footer>
-  This AI project was coded by <a href="https://www.beedieoneyewear.com/" target="_blank" rel="noopener noreferrer">Ebiye Beedie</a> and is hosted on <a href="https://github.com/missbeedie" target="_blank" rel="noopener noreferrer">Github</a> and <a href="https://eyewearbrandgenerator.netlify.app/" target="_blank" rel="noopener noreferrer">Netlify</a> 
+  This AI project was coded by <a href="https://www.beedieoneyewear.com/" target="_blank">Ebiye Beedie</a> and is hosted on <a href="https://github.com/missbeedie" target="_blank">Github</a> and <a href="https://eyewearbrandgenerator.netlify.app/" target="_blank">Netlify</a> 
 </footer>
 
   <script src="src/index.js"></script>
