improve user experience by adding blink animation to alert user when AI is generating a response

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
   <main>
     <div class="form">
     <form id="eyewear-generator-form" action="">
-      <input id="user-input" type="text" class="input-text" placeholder="What are you looking for?" required > 
+      <input id="user-input" type="search" class="input-text" placeholder="What are you looking for?" required > 
       <input type="submit" class="submit-button">
     </form>
     <span class="example">
       <small >
-      e.g. 'round', 'black-owned', 'trendy', 'ships to UK'
+      e.g. 'cheap', 'black-owned', 'trendy' or 'ships to UK'
     </small>
     </span>
     </div>
       
   </main>
 
-  <div class="eyewear-brand" id="eyewear-brand">
-    Here are your results:
+  <div class="eyewear-brand hidden" id="eyewear-brand">
+    Generating
   </div>
 
 
